--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.codehaus.sonar-plugins</groupId>
-        <artifactId>parent</artifactId>
-        <version>19</version>
-    </parent>
+    <groupId>org.codehaus.sonar-plugins</groupId>
     <artifactId>sonar-crowd-plugin</artifactId>
     <version>2.1-SNAPSHOT</version>
     <packaging>sonar-plugin</packaging>
@@ -41,52 +38,62 @@
         <connection>scm:git:https://github.com/SonarQubeCommunity/sonar-crowd.git</connection>
         <developerConnection>scm:git:git@github.com:SonarQubeCommunity/sonar-crowd.git</developerConnection>
         <url>https://github.com/SonarQubeCommunity/sonar-crowd</url>
-      <tag>HEAD</tag>
+        <tag>HEAD</tag>
     </scm>
     <issueManagement>
         <system>GitHub Issues</system>
         <url>https://github.com/SonarQubeCommunity/sonar-crowd/issues</url>
     </issueManagement>
     <properties>
-        <sonar.version>3.0</sonar.version>
+        <sonar.version>7.1</sonar.version>
         <sonar.pluginName>Crowd</sonar.pluginName>
         <sonar.pluginClass>org.sonar.plugins.crowd.CrowdPlugin</sonar.pluginClass>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.codehaus.sonar</groupId>
+            <groupId>org.sonarsource.sonarqube</groupId>
             <artifactId>sonar-plugin-api</artifactId>
             <version>${sonar.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.atlassian.crowd</groupId>
-            <artifactId>crowd-integration-client-rest</artifactId>
-            <version>2.7.2</version>
-            <exclusions>
-                <!-- Provided by Sonar -->
-                <exclusion>
-                    <groupId>commons-logging</groupId>
-                    <artifactId>commons-logging</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>log4j</groupId>
-                    <artifactId>log4j</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>com.atlassian.crowd.client</groupId>
+            <artifactId>atlassian-crowd-rest-client</artifactId>
+            <version>1.4</version>
         </dependency>
         <!-- unit tests -->
         <dependency>
-            <groupId>org.codehaus.sonar</groupId>
+            <groupId>org.sonarsource.sonarqube</groupId>
             <artifactId>sonar-testing-harness</artifactId>
             <version>${sonar.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.18.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
     <repositories>
         <repository>
             <id>atlassian</id>
-            <url>https://maven.atlassian.com/content/repositories/public</url>
+            <url>https://maven.atlassian.com/content/repositories/atlassian-public</url>
         </repository>
     </repositories>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
+                <artifactId>sonar-packaging-maven-plugin</artifactId>
+                <version>1.17</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <pluginClass>${sonar.pluginClass}</pluginClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
